--- a/index.css
+++ b/index.css
@@ -1,20 +1,55 @@
 * {
 margin: 0;
 padding: 0;
+background-color: #f2f4fc;
+font-family: 'Roboto';
+font-style: normal;
+color: #292e47;
+
 }
+h1{
+    font-size: 60px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    line-height: 130%;
+}
+h3 {
+    color: #292e47;
+    font-size: 40px;
+    margin: 3rem 0;
+}
+h5 {
+    margin: 30px 0 20px 0;
+    font-size: 24px;
+    line-height: 115%;
+    font-weight: 500;
+}
+p {
+    margin-top: 0px;
+    margin-bottom: 10px;
+    font-size: 17px;
+    font-weight: 400;
+    color: #6B708D;
+}
+
 .navbar {
     border: 1px solid black;
-    width: 100%;
-    height: 20vh;
     display: flex;
     justify-content: space-around;
+    align-content: center;
     align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 122px;
+    left: calc(50% - 1440px/2);
+    top: 0px;
 
 }
 .logoCircle {
     border: 1px solid black;
     width: 10%;
-    height: 3.2vh;
+    height: auto;
+    padding: 0;
 }
 .navigation {
     border: 1px solid black;
@@ -23,147 +58,181 @@ padding: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
-    font-size: 17px;
+    font-size: 20px;
     font-family: "Roboto";
     font-weight: 600;
+    
+}
+.navigation a:hover {
+    font-weight: bolder;
+    color: #072AC8;
+    
+
 }
 .contactBtn {   
     border: 1px solid black;
-    width: 7.8%;
-    height: 6.5vh;
+    width: 7.6%;
+    height: 4vh;
     background-color: #072AC8;
     font-size: 17px;
     font-family: "Roboto";
     font-weight:bold;
     color: white;
 }
-.Empower {
+
+.empower {
     border: 1px solid black;
+    width: 100%;
+    height:auto;
     display: flex;
-    flex-direction: row;
-    position: absolute;
-    width: 1440px;
-    height: 650px;
-    left: calc(50% - 1440px/2);
-    top: 320px; 
+    justify-content: center;
+   
 }
-.EmpowerBox {
-    position: absolute;
+.empowerBox { 
+    border: 3px solid red;
+    display:flex;
+    flex-direction:row;
+    justify-content: center;
+    width: 82%;
+    height:auto;  
+}
+.empowerTextcontainer{
+    border: 4px solid green;
     display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    width: 530px;
-    height: 422px;
-    left: 170px;
-    top: 109px;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    width: 50%;
+    height: auto;
 }
-.EmpowerTittle {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 60px;
-    line-height: 70px;
-    color: #292E47;
-    width: 530px;
-    height: 210px;
-    left: 170px;
-    top: 109px;
+.empowertexts {
+    border: 4px solid yellow;
+    width: 100%;
+    height: auto;
+    align-self: flex-start;
 }
-h1 {
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 60px;
-    line-height: 70px;
+.empowertexts h1 {
+   color: #292e47;
+   font-size: 130px;
 }
-p{
-    width: 435px;
-    height: 90px;
-    left: 170px;
-    top: 349px;
-    font-family: 'Roboto';
-    font-style: normal;
+.empowertexts p {
+    border: 1px solid black;
+    width: 85%;
     font-weight: 400;
-    font-size: 20px;
+    font-size: 43px;
     line-height: 150%;
     color: #6B708D;
+    margin-bottom: 3rem;
 }
+
 .getInTouchBtn {
-    width: 150px;
-    height: 52px;
-    left: 170px;
-    top: 479px;
-    background-color: #072AC8 ;
-    font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 500;
-    font-size: 17px;
-    line-height: 130%;
+    padding: 15px 30px;
+    background-color: #072ac8;
+    font-size: 22px;
     color: white;
-    text-align: center;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
+    border: 0;
     }
-    .SeeOurWork {
-        color: #6B708D;
-        font-family: 'Roboto';
-        font-style: normal;
+
+.empowertexts a {
+        text-decoration: none;
+        font-size: 22px;
         font-weight: 500;
-        font-size: 17px;
-        margin-left: 180px;
-        padding-bottom: 60px;
+        
     }
-    .EmpowerImage {
-        border: 1px solid black;
-        position: relative;
-        width: 700px;
-        height: 650px;
-        left: 700px;
-        top: 0px;
+.SeeOurWork {
+        color: #6B708D;
+        margin-left: 10%;
+        
     }
-    .card1{
-        position: absolute;
-        width: 400px;
-        height: 400px;
-        left: -80px;
-        bottom: 315px;
-        z-index: 1;
-        float: left;
+
+.empowerImage {
+    border: 1px solid purple;
+    position:relative;
+    display: flex;
+    justify-content: center;
+    height: auto;
+    width: 50%;
+    /* max-width: 60%; */
+   
     }
-    .heroimage {
-        position: relative;
-        width: 611.96px;
-        height: 637.34px;
-        left: -22px;
-        top: 0px;
-        justify-content: center;
-        z-index: -1
+ .empowerCard1{
+    position: absolute;
+    left: 5%;  
+    width:25%;
+    top: 5%;
     }
-    .card2 {
-        position: absolute;
-        width: 400px;
-        height: 400px;
-        left: 300px;
-        top: 380px;
-        z-index: 1;
-        float: right;
+ 
+ .empowerImage-img {
+    position:relative;
+    width: 100%;
+    height: auto;
     }
-.empower-bottom{
+.empowerCard2 {
+    position:absolute;
+    bottom: 5%;
+    right: 5%;
+    width: 25%;
+
+}
+.empower-bottom {
     border: 1px solid black;
     display: flex;
     justify-content: space-evenly;
     justify-items: center;
     align-items: center;
     flex-direction: row;
-    position: absolute;
-    width: 1440px;
+    width:100%;
     height: 96px;
-    left: calc(50% - 1440px/2);
-    top: 1002px;
-
+    top: 1100px;
 }
 .brand-logo {
+    -webkit-filter: grayscale(1);
+
+}
+.brand-logo:hover {
+    -webkit-filter: grayscale(0);
     
 }
+.recentProjects {
+    border: 1px solid black;
+    width: 100%;
+    height:auto;
+    display: flex;
+    justify-content: center;
+    margin-top: 5%;
+}
+.recenProjectsContainer{
+    border: 3px solid red;
+    display:flex;
+    flex-direction:column;
+    width: 82%;
+    height:auto;  
+}
+.recentprojectsIn{
+    border: 3px solid blue;
+    display:flex;
+    flex-direction:row;
+    justify-content: space-between;
+    width: 100%;
+    height:auto;
+}
+.recentBoxes {
+    border: 3px solid green;
+    width: 30%;
+    height:790px;
+    display: flex;
+    flex-direction: column;
+    color: #292E47;
+    
+    
+}
+.recentBoxes h5 {
+    margin-left: 7%;
+}
+
+
+
+
+
+
     
