--- a/index.css
+++ b/index.css
@@ -235,112 +235,14 @@ p {
 
    
 }
+.vectorifyImage{
+    height: 543px;
+    
+
+}
 .margin7 {
     margin-left: 7%;
 }
-/* .testimonialContainer{
-    border: 3px solid red;
-    width: 100%;
-    height: auto;
-    display: flex;
-    justify-content: center;
-    margin-top: 10%;
-
-}
-.testimonialBox{
-    border: 3px solid green;
-    width: 90%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    background-image: url("./images/testimonial-section/orbit.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #292E47;
-    
-}
-.testimonialMemojis{
-    border: 3px solid yellow;
-    width: 90%;
-    height: 700px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-
-    background-image: url("./images/testimonial-section/orbit.png");
-    background-color: #292E47;
-   
-
-}
-.testimonialImages1{
-
-    width: 7%;
-    height: 14%;
-    align-self: flex-start;
-    margin-top: 3%;
-    opacity: 1;
-}
-.testimonialImages2{
-    width: 7%;
-    height: 14%;
-    margin-left:84.9%;
-    margin-top: 3%;
-    opacity: 1;
-}
-.testimonialImages3 {
-    width: 7%;
-    height: 14%;
-    align-self: flex-end;
-    margin-right: %;
-    margin-bottom: 3%;
-    
-}
-
-.testimonialImages4{
-    width: 7%;
-    height: 14%;
-    align-self: flex-end;
-    margin-left:84.9%;
-    margin-bottom: 3%;
-    
-}
-
-
-.testimonialTextbox {
-    border: 3px solid lightblue;
-    position:absolute;
-    display: flex;
-    justify-content: center;
-    align-self: center;
-    align-items: center;
-
-    width: 70%;
-    height: 600px;
-    background-image: url("./images/testimonial-section/orbit.png");
-    background-color: #292E47;
-    
-    
-} 
-.textimonialText {
-    border: 3px solid lightblue; 
-    width: 50%;
-    height: 500px;
-    background-image: url("./images/testimonial-section/orbit.png");
-    background-color: #292E47;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    
-}
-.textimonialText h3{
-}
-.textimonialText p {
-    
-}
-     */
 .hearbox{
     border: 3px solid red;
     width: 100%;
@@ -364,8 +266,7 @@ p {
     background-repeat: no-repeat;
     background-size: cover; 
     gap:50px;
-    /* margin: 1.5rem 0 6rem 0;
-    padding: 1.5rem 5em; */
+
 }
 
 .central {
@@ -476,7 +377,7 @@ p {
     border: 3px solid red;
     margin-top: 10%;
     width: 100%;
-    height: 700px;
+    /* height: 700px; */
     display: flex;
     justify-content:center;
 
@@ -492,8 +393,6 @@ p {
 .ourservices{
     border: 3px solid green;
     width: 100%;
-    height: auto;
-    height: auto;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -507,6 +406,7 @@ p {
     box-shadow: 0px 39px 78px rgba(0, 0, 0, 0.1);
     width: 23%;
     padding: 1rem;
+    height: 700px;
 }
 .service-container p {
     color: #6B708D;
@@ -519,7 +419,7 @@ p {
     font-size: 20px;
     line-height: 150%;
     color: #072AC8;
-    margin-top: 15%;
+    margin-top: 9%;
 }
 .icon-1{
     width: 150px;
@@ -552,6 +452,130 @@ p {
     border-radius: 50%;
 }
 
+.questionsBox{
+    margin-top: 10%;
+    border: 3px solid red;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    height: auto;
+
+}
+
+.questions {
+    border: 3px solid blue;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffc600;
+    width: 90%;
+    height: auto;
+}
+.questions h5 {
+    font-size: 80px;
+
+}
+.questions p {
+  font-size: 30px;
+  margin-top: 4%;
+  margin-bottom: 4%;
+}
+
+.questionstext {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    
+    
+
+}
+.formulario {
+  
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    
+}
+.inputbox { 
+    
+    display: flex;
+    justify-content:center;
+    background-color: #ecf7ff;
+    margin-right: 50px;
+    margin-bottom: 15%;
+    border: none;
+    height: 85px;
+}
+.formulario input {
+    
+    border: none;
+    background-color: #ecf7ff;
+    font-size:25px;    
+}
+.button {
+    font-size: 50px;
+    margin-bottom: 15%;
+    color: white;
+    align-self: center; */
+}
+.button1 {
+    background-color: #072AC8;
+    border: none;
+    color: white;
+    width: 120px;
+    height: 85px;
+    font-size: 20px;
+
+} 
+footer {
+    
+    margin-top: 5%;
+    width: 100%;
+    display: flex;
+    justify-content:flex-start;
+    margin-left: 30px;
+    align-items: center;
+
+}
+.footercontainer1 {
+    
+    width: 70%;
+    height: 330px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.footercontainer2 img {
+    width: 100px;
+    margin-bottom: 30px;
+    display: flex;
+    margin-top: 90px;
+S}
+.footercontainer2 p {
+    color: #6b708d;
+    }
+
+.footercontainer3 {
+    display: flex;
+    flex-direction: column;
+
+    
+}
+.footercontainer3 ul {
+    display: flex;
+    flex-direction: row;
+   
+}
+footer li {
+    font-size: 17px;
+    list-style: none;
+    padding:  4rem;
+
+    color: #6B708D;
+}
 
 
 
