--- a/project-page/projectPage.css
+++ b/project-page/projectPage.css
@@ -50,7 +50,7 @@
     }
     .logoCircle {
         border: 1px solid black;
-        width: 10%;
+        width: 5%;
         height: auto;
         padding: 0;
     }
@@ -103,7 +103,7 @@
     .simplifybox img {
         width: 100%;
         height: 900px;
-        box-shadow: 20px 20px 20px 20px whitesmoke;
+        box-shadow: 0 0 10px 30px rgba(0, 0, 0, 0.1);
         margin-top: 3%;
     }
     .simplifybox p {
@@ -118,6 +118,7 @@
     display: flex;
     justify-content: center;
     margin-top: 5%;
+    
 }
 .recenProjectsContainer {
     border: 3px solid red;
@@ -125,6 +126,7 @@
     flex-direction:column;
     width: 82%;
     height:auto;  
+    
 }
 .recentprojectsIn {
     border: 3px solid blue;
@@ -139,10 +141,11 @@
 .recentBoxes {
     border: 3px solid green;
     width: 30%;
-    height:790px;
+    height:980px;
     display: flex;
     flex-direction: column;
     color: #292E47;
+    box-shadow: 0 0 10px 30px rgba(0, 0, 0, 0.1);
     
 }
 .recentBoxes h5 {
@@ -169,7 +172,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    height: auto;
+    height: 700px;
 
 }
 
