--- a/index.css
+++ b/index.css
@@ -1,11 +1,16 @@
 * {
 margin: 0;
 padding: 0;
-/* background-color: #f2f4fc; */
 font-family: 'Roboto';
 font-style: normal;
 color: #292e47;
+/* justify-content: center;
+width: 100%; */
 
+
+}
+body {
+    background-color: #ecf7ff;
 }
 h1{
     font-size: 60px;
@@ -47,7 +52,7 @@ p {
 }
 .logoCircle {
     border: 1px solid black;
-    width: 10%;
+    width: 5%;
     height: auto;
     padding: 0;
 }
@@ -70,9 +75,9 @@ p {
 
 }
 .contactBtn {   
-    border: 1px solid black;
+    border: none;
     width: 7.6%;
-    height: 4vh;
+    height: 5vh;
     background-color: #072AC8;
     font-size: 17px;
     font-family: "Roboto";
@@ -83,6 +88,7 @@ p {
 .empower {
     border: 1px solid black;
     width: 100%;
+    /* min-width: 90%; */
     height:auto;
     display: flex;
     justify-content: center;
@@ -128,14 +134,16 @@ p {
 .getInTouchBtn {
     padding: 15px 30px;
     background-color: #072ac8;
-    font-size: 22px;
+    font-size: 24px;
     color: white;
     border: 0;
+    height: 79px;
+    width: 250px;
     }
 
 .empowertexts a {
         text-decoration: none;
-        font-size: 22px;
+        font-size: 24px;
         font-weight: 500;
         
     }
@@ -152,7 +160,7 @@ p {
     justify-content: center;
     height: auto;
     width: 50%;
-    /* max-width: 60%; */
+   
    
     }
  .empowerCard1{
@@ -219,10 +227,11 @@ p {
 .recentBoxes {
     border: 3px solid green;
     width: 30%;
-    height:790px;
+    height:1000px;
     display: flex;
     flex-direction: column;
     color: #292E47;
+    box-shadow: 20px grey;
     
 }
 .recentBoxes h5 {
@@ -377,7 +386,6 @@ p {
     border: 3px solid red;
     margin-top: 10%;
     width: 100%;
-    /* height: 700px; */
     display: flex;
     justify-content:center;
 
@@ -470,7 +478,7 @@ p {
     align-items: center;
     background-color: #ffc600;
     width: 90%;
-    height: auto;
+    height: 800px;
 }
 .questions h5 {
     font-size: 80px;
@@ -519,7 +527,7 @@ p {
     font-size: 50px;
     margin-bottom: 15%;
     color: white;
-    align-self: center; */
+    align-self: center; 
 }
 .button1 {
     background-color: #072AC8;
@@ -547,6 +555,7 @@ footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-left: 5%;
 }
 .footercontainer2 img {
     width: 100px;
@@ -576,45 +585,118 @@ footer li {
 
     color: #6B708D;
 }
+@media only screen and (max-width: 820px) {
 
+.contactBtn {
+    width: auto;
+    font-size: 20px;
+}
+.logoCircle {
+    width: auto;
+}
+.empowerBox {
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-@media screen and (max-width:7767px) {
+    max-width: 720px;
+    min-width: 700px;
+    margin: 0 auto 3rem auto;
 
 }
+.empowertexts h1 {
+    font-size: 50px;
+}
+.empowertexts p {
+    font-size: 25px;
+}
+.empowerImage {
+    border: 1px solid purple;
+    position:relative;
+    display: flex;
+    justify-content: center;
+    height: auto;
+    width: auto;
+}
+
+
+
+@media only screen and (max-width: 390px) {
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+}
+
+
+@media only screen and (max-width: 650px) {
+
+
+
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
